# TJUcompiler

./: .clang-format  .gitignore  .vimspector.json  CMakeLists.txt  build_and_run.sh  check_vim_python.sh  install_vim_with_python.sh  main.cpp  readme.md  setup_dev_env.sh
lexical_analysis/: DFA.h  Edge.h  Lexer.h  NFA.h  Node.h  Token.h  utils.h
results/: lexical_analysis_result_of_test_1.sy  lexical_analysis_result_of_test_2.sy  lexical_analysis_result_of_test_3.sy  syntax_analysis_result_of_test_1.sy  syntax_analysis_result_of_test_2.sy  syntax_analysis_result_of_test_3.sy
syntax_analysis/: First.h  Follow.h  Global.h  Grammar  InitSyntaxAnalyzer.h  PredictTable.h  Production.h  Syner.h
